# zrata-trader

./: .coverage  README.md  main.py  pyproject.toml  test.py
.github/: CODEOWNERS
engine/cache/: hasher.py  storage_interface.py
engine/models/: backtest_models.py  tes.py
tests/: conftest.py
tests/engine/cache/: test_hasher.py
