[project]
name = "zrata-trader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "python-multipart>=0.0.20",
    "uvicorn[standard]>=0.35.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "pytest>=8.4.1",
    "ruff>=0.12.10",
]

[project.scripts]
dev = "uv run python3 -m uvicorn main:app --reload --port 8000"
test = "pytest"
lint = "ruff check ."
format = "black ."
